--- a/src/Template/cup/user/index.twig
+++ b/src/Template/cup/user/index.twig
@@ -89,18 +89,16 @@
                 <div class="card-body">
                     {% embed 'mixin/datatable.twig' %}
                         {% block thead %}
-                            <tr>
-                                <th width="15%" class="d-none d-md-table-cell">{{ 'Login'|locale }}</th>
-                                <th>{{ 'Full name'|locale }}</th>
-                                <th>{{ 'Phone & E-Mail'|locale }}</th>
-                                <th width="15%" class="d-none d-md-table-cell">{{ 'Group'|locale }}</th>
-                                <th width="30%" class="text-right"></th>
-                            </tr>
+                            <div class="col-2 d-none d-md-block">{{ 'Login'|locale }}</div>
+                            <div class="col">{{ 'Full name'|locale }}</div>
+                            <div class="col">{{ 'Phone & E-Mail'|locale }}</div>
+                            <div class="col-1 d-none d-md-block">{{ 'Group'|locale }}</div>
+                            <div class="col-4 text-right"></div>
                         {% endblock %}
 
                         {% block tbody %}
-                            {% for user in list.sortByDesc('session.date') %}
-                                <tr class="
+                            {% for user in list %}
+                                <div class="row
                                     {{
                                         user.status == reference('/App/Domain/Types/UserStatusType::STATUS_DELETE')
                                         ? 'bg-danger'
@@ -111,12 +109,12 @@
                                         )
                                     }}
                                 ">
-                                    <td width="15%" class="d-none d-md-table-cell">{{ user.username ?: '<code>&mdash;</code>'|raw }}</td>
-                                    <td>
+                                    <div class="col-2 d-none d-md-block">{{ user.username ?: '<code>&mdash;</code>'|raw }}</div>
+                                    <div class="col">
                                         <span class="d-none d-xl-inline">{{ user.getName('full') ?: '<code>&mdash;</code>'|raw }}</span>
                                         <span class="d-xl-none">{{ user.getName('name') ?: '<code>&mdash;</code>'|raw }}</span>
-                                    </td>
-                                    <td>
+                                    </div>
+                                    <div class="col">
                                         <div class="float-left">
                                             {{ user.getPhone() ? (user.getPhone() ~ '<br>')|raw : '' }}
                                             {{ user.getEmail() ? (user.getEmail() ~ '<br>')|raw : '' }}
@@ -127,9 +125,9 @@
                                                 <i class="fa fa-envelope" data-toggle="tooltip" data-placement="right" title="{{ 'Subscribed to newsletter'|locale }}"></i>
                                             {% endif %}
                                         </div>
-                                    </td>
-                                    <td width="15%" class="d-none d-md-table-cell">{{ user.group.title ?? ('<code>' ~ ('Without group'|locale) ~ '</code>')|raw }}</td>
-                                    <td width="30%" class="text-right">
+                                    </div>
+                                    <div class="col-1 d-none d-md-block">{{ user.group.title|u.truncate(10, '.') ?? ('<code>' ~ ('Without group'|locale) ~ '</code>')|raw }}</div>
+                                    <div class="col-4 text-right">
                                         <form action="/cup/user/{{ user.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Are you sure you want to delete the user?'|locale }}');">
                                             <div class="btn-group">
                                                 <a href="/cup/user/{{ user.uuid }}/view" class="btn btn-sm btn-outline-info">
@@ -148,8 +146,8 @@
                                                 {% endif %}
                                             </div>
                                         </form>
-                                    </td>
-                                </tr>
+                                    </div>
+                                </div>
                             {% endfor %}
                         {% endblock %}
                     {% endembed %}
