--- a/src/Template/cup/user/subscriber/index.twig
+++ b/src/Template/cup/user/subscriber/index.twig
@@ -25,19 +25,17 @@
                 <div class="card-body">
                     {% embed 'mixin/datatable.twig' %}
                         {% block thead %}
-                            <tr>
-                                <th>E-Mail</th>
-                                <th width="15%" class="d-none d-md-table-cell">{{ 'Added date'|locale }}</th>
-                                <th width="20%" class="text-right"></th>
-                            </tr>
+                            <div class="col">E-Mail</div>
+                            <div class="col-2 d-none d-md-block">{{ 'Added date'|locale }}</div>
+                            <div class="col-3 text-right"></div>
                         {% endblock %}
 
                         {% block tbody %}
-                            {% for item in list.sortByDesc('date') %}
-                                <tr>
-                                    <td>{{ item.email }}</td>
-                                    <td width="15%" class="d-none d-md-table-cell">{{ item.date|df('d.m.Y H:i:s') }}</td>
-                                    <td width="20%" class="text-right">
+                            {% for item in list %}
+                                <div class="row">
+                                    <div class="col">{{ item.email }}</div>
+                                    <div class="col-2 d-none d-md-block">{{ item.date|df('d.m.Y H:i:s') }}</div>
+                                    <div class="col-3 text-right">
                                         <form action="/cup/user/subscriber/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Are you sure you want to delete the subscriber address?'|locale }}');">
                                             <div class="btn-group">
                                                 <button type="submit" class="btn btn-sm btn-danger">
@@ -46,8 +44,8 @@
                                                 </button>
                                             </div>
                                         </form>
-                                    </td>
-                                </tr>
+                                    </div>
+                                </div>
                             {% endfor %}
                         {% endblock %}
                     {% endembed %}
