--- a/src/Template/cup/form/index.twig
+++ b/src/Template/cup/form/index.twig
@@ -25,22 +25,20 @@
                 <div class="card-body">
                     {% embed 'mixin/datatable.twig' %}
                         {% block thead %}
-                            <tr>
-                                <th>{{ 'Title'|locale }}</th>
-                                <th width="20%" class="d-none d-md-table-cell">{{ 'E-Mail addresses of recipients'|locale }}</th>
-                                <th width="35%" class="text-right"></th>
-                            </tr>
+                            <div class="col">{{ 'Title'|locale }}</div>
+                            <div class="col-3 d-none d-md-block">{{ 'E-Mail addresses of recipients'|locale }}</div>
+                            <div class="col-4 text-right"></div>
                         {% endblock %}
 
                         {% block tbody %}
                             {% for item in list %}
-                                <tr>
-                                    <td>{{ item.title }}</td>
-                                    <td width="20%" class="d-none d-md-table-cell">
+                                <div class="row">
+                                    <div class="col">{{ item.title }}</div>
+                                    <div class="col-3 d-none d-md-block">
                                         {{ item.mailto|join('<br>+ ')|raw }}
                                         {{ item.authorSend ? '<br>+ ' ~ 'applicant'|locale }}
-                                    </td>
-                                    <td width="35%" class="text-right">
+                                    </div>
+                                    <div class="col-4 text-right">
                                         <form action="/cup/form/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Are you sure you want to delete the form?'|locale }}');">
                                             <div class="btn-group">
                                                 <a href="/cup/form/{{ item.uuid }}/view" class="btn btn-sm btn-outline-info">
@@ -57,8 +55,8 @@
                                                 </button>
                                             </div>
                                         </form>
-                                    </td>
-                                </tr>
+                                    </div>
+                                </div>
                             {% endfor %}
                         {% endblock %}
                     {% endembed %}
