--- a/src/Template/cup/page/form.twig
+++ b/src/Template/cup/page/form.twig
@@ -35,7 +35,7 @@
                     </div>
                     <div class="card-body">
                         <div class="tab-content">
-                            {# Tab: Товар #}
+                            {# Tab: Page #}
                             <div class="tab-pane fade show active" id="page" role="tabpanel">
                                 <div class="row">
                                     <div class="col-md-6">
@@ -79,7 +79,7 @@
                                 </div>
                             </div>
 
-                            {# Tab: Дополнительно #}
+                            {# Tab: Other #}
                             <div class="tab-pane fade" id="other" role="tabpanel">
                                 <div class="row">
                                     <div class="col-md-6">
